--- a/index.html
+++ b/index.html
@@ -1,136 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camcall Retail Private Limited</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AUTONO Style Footer</title>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="logo">Camcall Retail Pvt. Ltd.</div>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#vision">Vision</a>
-            <a href="#info">Real-Time Info</a>
-            <a href="#careers">Careers</a>
-            <a href="#contact">Contact</a>
-        </nav>
+<!-- Content before footer -->
+<section class="fade-slide" style="height: 100vh; background: #000; color: white; display:flex; align-items:center; justify-content:center;">
+    <h1>Scroll Down to Footer</h1>
+</section>
+
+<!-- Gradient transition -->
+<div class="page-gradient fade-slide"></div>
+
+<!-- Footer -->
+<footer class="footer fade-slide">
+  <div class="footer-container">
+    <div class="footer-left">
+      <h2>AUTONO</h2>
+      <ul>
+        <li><a href="#">Technology</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Careers</a></li>
+      </ul>
     </div>
 
-    <!-- Hero -->
-    <section id="home" class="hero">
-        <div class="overlay"></div>
-        <div class="hero-content fade-slide">
-            <h1 class="hero-title">Empowering Retail Excellence</h1>
-            <p class="hero-subtitle">At Camcall Retail Private Limited, we provide innovative retail solutions to transform your business.</p>
-        </div>
-    </section>
+    <div class="footer-middle">
+      <p>Tel: (515) 351-1487</p>
+      <p>Email: <a href="mailto:info@autono.com">info@autono.com</a></p>
+    </div>
 
-    <!-- Gradient Divider -->
-    <div class="gradient-divider"></div>
+    <div class="footer-right">
+      <h3>SUBSCRIBE</h3>
+      <p>Sign up to receive Autono news and updates.</p>
+      <form>
+        <input type="email" placeholder="Email *" required>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </div>
 
-    <!-- Vision -->
-    <section id="vision" class="vision fade-slide">
-        <div class="vision-inner">
-            <div class="vision-text">
-                <h2 class="vision-title">Our Vision</h2>
-                <p class="vision-desc">To become a leader in retail innovation by offering cutting-edge technology, outstanding customer service, and sustainable growth strategies. We aim to empower businesses to reach their full potential in the modern market.</p>
-            </div>
-            <div class="vision-image">
-                <img src="images/vision.jpg" alt="Vision Image">
-            </div>
-        </div>
-    </section>
+  <div class="footer-bottom">
+    <p>© 2023 by Autono. Powered by <strong>Moon Digital 🚀</strong></p>
+    <div class="social-icons">
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+  </div>
+</footer>
 
-    <!-- Real-Time Information (Flip Layout) -->
-    <section id="info" class="flip-layout fade-slide">
-        <div class="image-box">
-            <img src="images/realtime.jpg" alt="Real Time Information">
-        </div>
-        <div class="text-box">
-            <h2>Real-Time Information</h2>
-            <p>We provide advanced analytics and real-time data tracking so your retail decisions are always based on the latest market insights. From inventory updates to customer behavior patterns, our tools keep you ahead of the competition.</p>
-            <a href="#" class="read-more">Learn More <span>→</span></a>
-        </div>
-    </section>
-
-    <!-- Careers -->
-    <section id="careers" class="flip-layout fade-slide">
-        <div class="text-box">
-            <h2>Careers at Camcall</h2>
-            <p>Join our dynamic team and help shape the future of retail technology. We value creativity, dedication, and a passion for innovation.</p>
-            <a href="#" class="read-more">View Openings <span>→</span></a>
-        </div>
-        <div class="image-box">
-            <img src="images/careers.jpg" alt="Careers">
-        </div>
-    </section>
-
-    <!-- Job Description -->
-    <section class="flip-layout fade-slide">
-        <div class="image-box">
-            <img src="images/jobdesc.jpg" alt="Job Description">
-        </div>
-        <div class="text-box">
-            <h2>Job Opportunities</h2>
-            <p>We are hiring for various positions across departments including sales, marketing, customer support, and software development. Apply today and grow with us!</p>
-            <a href="#" class="read-more">Apply Now <span>→</span></a>
-        </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="info-section fade-slide">
-        <div class="info-text">
-            <h2>Contact Us</h2>
-            <p>Email: info@camcallretail.com</p>
-            <p>Phone: +91-9876543210</p>
-            <p>Address: 123 Business Street, Mumbai, India</p>
-        </div>
-        <div class="info-image">
-            <img src="images/contact.jpg" alt="Contact Us">
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 Camcall Retail Private Limited. All Rights Reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
-    
-    <script>
-// Fade & Slide Animation on Scroll
-const fadeSlides = document.querySelectorAll('.fade-slide');
-
-const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-        if (entry.isIntersecting) {
-            entry.target.classList.add('visible');
-        }
-    });
-}, { threshold: 0.2 });
-
-fadeSlides.forEach(section => {
-    observer.observe(section);
-});
-
-// Navbar Hide/Show on Scroll
-let lastScrollY = window.scrollY;
-const navbar = document.querySelector('.navbar');
-
-window.addEventListener('scroll', () => {
-    if (window.scrollY > lastScrollY) {
-        navbar.classList.add('hide'); // scrolling down
-    } else {
-        navbar.classList.remove('hide'); // scrolling up
-    }
-    lastScrollY = window.scrollY;
-});
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
-
