--- a/index.html
+++ b/index.html
@@ -1,60 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AUTONO Style Footer</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Camcall Retail Private Limited</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<!-- Content before footer -->
-<section class="fade-slide" style="height: 100vh; background: #000; color: white; display:flex; align-items:center; justify-content:center;">
-    <h1>Scroll Down to Footer</h1>
-</section>
-
-<!-- Gradient transition -->
-<div class="page-gradient fade-slide"></div>
-
-<!-- Footer -->
-<footer class="footer fade-slide">
-  <div class="footer-container">
-    <div class="footer-left">
-      <h2>AUTONO</h2>
-      <ul>
-        <li><a href="#">Technology</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Careers</a></li>
-      </ul>
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="logo">Camcall Retail Pvt. Ltd.</div>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#vision">Vision</a>
+            <a href="#info">Real-Time Info</a>
+            <a href="#careers">Careers</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </div>
 
-    <div class="footer-middle">
-      <p>Tel: (515) 351-1487</p>
-      <p>Email: <a href="mailto:info@autono.com">info@autono.com</a></p>
-    </div>
+    <!-- Hero -->
+    <section id="home" class="hero">
+        <div class="overlay"></div>
+        <div class="hero-content fade-slide">
+            <h1 class="hero-title">Empowering Retail Excellence</h1>
+            <p class="hero-subtitle">At Camcall Retail Private Limited, we provide innovative retail solutions to transform your business.</p>
+        </div>
+        <div class="hero-gradient"></div>
+    </section>
 
-    <div class="footer-right">
-      <h3>SUBSCRIBE</h3>
-      <p>Sign up to receive Autono news and updates.</p>
-      <form>
-        <input type="email" placeholder="Email *" required>
-        <button type="submit">Subscribe</button>
-      </form>
-    </div>
-  </div>
+    <!-- Vision -->
+    <section id="vision" class="vision fade-slide">
+        <div class="vision-inner">
+            <div class="vision-text">
+                <h2 class="vision-title">Our Vision</h2>
+                <p class="vision-desc">To become a leader in retail innovation by offering cutting-edge technology, outstanding customer service, and sustainable growth strategies. We aim to empower businesses to reach their full potential in the modern market.</p>
+            </div>
+            <div class="vision-image">
+                <img src="images/vision.jpg" alt="Vision Image" loading="lazy">
+            </div>
+        </div>
+    </section>
 
-  <div class="footer-bottom">
-    <p>© 2023 by Autono. Powered by <strong>Moon Digital 🚀</strong></p>
-    <div class="social-icons">
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-    </div>
-  </div>
-</footer>
+    <!-- Real-Time Information -->
+    <section id="info" class="flip-layout fade-slide">
+        <div class="image-box">
+            <img src="images/realtime.jpg" alt="Real Time Information" loading="lazy">
+        </div>
+        <div class="text-box">
+            <h2>Real-Time Information</h2>
+            <p>We provide advanced analytics and real-time data tracking so your retail decisions are always based on the latest market insights.</p>
+            <a href="#" class="read-more">Learn More <span>→</span></a>
+        </div>
+    </section>
 
-<script src="script.js"></script>
+    <!-- Careers -->
+    <section id="careers" class="flip-layout fade-slide">
+        <div class="text-box">
+            <h2>Careers at Camcall</h2>
+            <p>Join our dynamic team and help shape the future of retail technology. We value creativity, dedication, and a passion for innovation.</p>
+            <a href="#" class="read-more">View Openings <span>→</span></a>
+        </div>
+        <div class="image-box">
+            <img src="images/careers.jpg" alt="Careers" loading="lazy">
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact-section fade-slide">
+        <div class="contact-container">
+            <div class="contact-left">
+                <h2 class="logo">CAMCALL RETAIL</h2>
+                <ul class="contact-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#vision">Vision</a></li>
+                    <li><a href="#info">Services</a></li>
+                    <li><a href="#careers">Careers</a></li>
+                </ul>
+            </div>
+
+            <div class="contact-center">
+                <p>Tel: +91-9876543210</p>
+                <p>Email: <a href="mailto:info@camcallretail.com">info@camcallretail.com</a></p>
+                <p>Address: 123 Business Street, Mumbai, India</p>
+            </div>
+
+            <div class="contact-right">
+                <h3>SUBSCRIBE</h3>
+                <p>Sign up to receive Camcall news and updates.</p>
+                <form id="subscribeForm" class="contact-form">
+                    <input type="email" placeholder="Email *" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="contact-bottom">
+            <p>© 2025 by Camcall Retail Private Limited. All Rights Reserved</p>
+            <div class="social-icons">
+                <a href="#" aria-label="LinkedIn"><img src="images/linkedin-icon.png" alt="LinkedIn" loading="lazy"></a>
+                <a href="#" aria-label="Facebook"><img src="images/facebook-icon.png" alt="Facebook" loading="lazy"></a>
+                <a href="#" aria-label="Twitter"><img src="images/twitter-icon.png" alt="Twitter" loading="lazy"></a>
+                <a href="#" aria-label="Instagram"><img src="images/instagram-icon.png" alt="Instagram" loading="lazy"></a>
+            </div>
+        </div>
+    </section>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
