--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="vision-desc">To become a leader in retail innovation by offering cutting-edge technology, outstanding customer service, and sustainable growth strategies. We aim to empower businesses to reach their full potential in the modern market.</p>
             </div>
             <div class="vision-image">
-                <img src="images/vision.jpg" alt="Vision Image" loading="lazy">
+                <img src="vision.jpg" alt="Vision Image" loading="lazy">
             </div>
         </div>
     </section>
@@ -112,3 +112,4 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
