--- a/index.html
+++ b/index.html
@@ -12,86 +12,87 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <div class="logo">Camcall Retail Pvt. Ltd.</div>
+        <div class="logo animate-item">Camcall Retail Pvt. Ltd.</div>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#vision">Vision</a>
-            <a href="#info">Real-Time Info</a>
-            <a href="#careers">Careers</a>
-            <a href="#contact">Contact</a>
+            <a href="#home" class="animate-item">Home</a>
+            <a href="#vision" class="animate-item">Vision</a>
+            <a href="#info" class="animate-item">Real-Time Info</a>
+            <a href="#careers" class="animate-item">Careers</a>
+            <a href="#contact" class="animate-item">Contact</a>
         </nav>
     </div>
 
     <!-- Hero -->
     <section id="home" class="hero">
         <div class="overlay"></div>
-        <div class="hero-content fade-slide">
-            <h1 class="hero-title">Empowering Retail Excellence</h1>
-            <p class="hero-subtitle">At Camcall Retail Private Limited, we provide innovative retail solutions to transform your business.</p>
+        <div class="hero-content">
+            <h1 class="hero-title animate-item">Empowering Retail Excellence</h1>
+            <p class="hero-subtitle animate-item">At Camcall Retail Private Limited, we provide innovative retail solutions to transform your business.</p>
+            <a href="#contact" class="cta-button animate-item">Get Started</a>
         </div>
         <div class="hero-gradient"></div>
     </section>
 
     <!-- Vision -->
-    <section id="vision" class="vision fade-slide">
+    <section id="vision" class="vision">
         <div class="vision-inner">
             <div class="vision-text">
-                <h2 class="vision-title">Our Vision</h2>
-                <p class="vision-desc">To become a leader in retail innovation by offering cutting-edge technology, outstanding customer service, and sustainable growth strategies. We aim to empower businesses to reach their full potential in the modern market.</p>
+                <h2 class="vision-title animate-item">Our Vision</h2>
+                <p class="vision-desc animate-item">To become a leader in retail innovation by offering cutting-edge technology, outstanding customer service, and sustainable growth strategies. We aim to empower businesses to reach their full potential in the modern market.</p>
             </div>
-            <div class="vision-image">
+            <div class="vision-image animate-item">
                 <img src="vision.jpg" alt="Vision Image" loading="lazy">
             </div>
         </div>
     </section>
 
     <!-- Real-Time Information -->
-    <section id="info" class="flip-layout fade-slide">
-        <div class="image-box">
+    <section id="info" class="flip-layout">
+        <div class="image-box animate-item">
             <img src="images/realtime.jpg" alt="Real Time Information" loading="lazy">
         </div>
         <div class="text-box">
-            <h2>Real-Time Information</h2>
-            <p>We provide advanced analytics and real-time data tracking so your retail decisions are always based on the latest market insights.</p>
-            <a href="#" class="read-more">Learn More <span>→</span></a>
+            <h2 class="animate-item">Real-Time Information</h2>
+            <p class="animate-item">We provide advanced analytics and real-time data tracking so your retail decisions are always based on the latest market insights.</p>
+            <a href="#" class="read-more animate-item">Learn More <span>→</span></a>
         </div>
     </section>
 
     <!-- Careers -->
-    <section id="careers" class="flip-layout fade-slide">
+    <section id="careers" class="flip-layout">
         <div class="text-box">
-            <h2>Careers at Camcall</h2>
-            <p>Join our dynamic team and help shape the future of retail technology. We value creativity, dedication, and a passion for innovation.</p>
-            <a href="#" class="read-more">View Openings <span>→</span></a>
+            <h2 class="animate-item">Careers at Camcall</h2>
+            <p class="animate-item">Join our dynamic team and help shape the future of retail technology. We value creativity, dedication, and a passion for innovation.</p>
+            <a href="#" class="read-more animate-item">View Openings <span>→</span></a>
         </div>
-        <div class="image-box">
+        <div class="image-box animate-item">
             <img src="images/careers.jpg" alt="Careers" loading="lazy">
         </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="contact-section fade-slide">
+    <section id="contact" class="contact-section">
         <div class="contact-container">
             <div class="contact-left">
-                <h2 class="logo">CAMCALL RETAIL</h2>
+                <h2 class="logo animate-item">CAMCALL RETAIL</h2>
                 <ul class="contact-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#vision">Vision</a></li>
-                    <li><a href="#info">Services</a></li>
-                    <li><a href="#careers">Careers</a></li>
+                    <li class="animate-item"><a href="#home">Home</a></li>
+                    <li class="animate-item"><a href="#vision">Vision</a></li>
+                    <li class="animate-item"><a href="#info">Services</a></li>
+                    <li class="animate-item"><a href="#careers">Careers</a></li>
                 </ul>
             </div>
 
             <div class="contact-center">
-                <p>Tel: +91-9876543210</p>
-                <p>Email: <a href="mailto:info@camcallretail.com">info@camcallretail.com</a></p>
-                <p>Address: 123 Business Street, Mumbai, India</p>
+                <p class="animate-item">Tel: +91-9876543210</p>
+                <p class="animate-item">Email: <a href="mailto:info@camcallretail.com">info@camcallretail.com</a></p>
+                <p class="animate-item">Address: 123 Business Street, Mumbai, India</p>
             </div>
 
             <div class="contact-right">
-                <h3>SUBSCRIBE</h3>
-                <p>Sign up to receive Camcall news and updates.</p>
-                <form id="subscribeForm" class="contact-form">
+                <h3 class="animate-item">SUBSCRIBE</h3>
+                <p class="animate-item">Sign up to receive Camcall news and updates.</p>
+                <form id="subscribeForm" class="contact-form animate-item">
                     <input type="email" placeholder="Email *" required>
                     <button type="submit">Subscribe</button>
                 </form>
@@ -99,8 +100,8 @@
         </div>
 
         <div class="contact-bottom">
-            <p>© 2025 by Camcall Retail Private Limited. All Rights Reserved</p>
-            <div class="social-icons">
+            <p class="animate-item">© 2025 by Camcall Retail Private Limited. All Rights Reserved</p>
+            <div class="social-icons animate-item">
                 <a href="#" aria-label="LinkedIn"><img src="images/linkedin-icon.png" alt="LinkedIn" loading="lazy"></a>
                 <a href="#" aria-label="Facebook"><img src="images/facebook-icon.png" alt="Facebook" loading="lazy"></a>
                 <a href="#" aria-label="Twitter"><img src="images/twitter-icon.png" alt="Twitter" loading="lazy"></a>
@@ -112,4 +113,3 @@
     <script src="script.js" defer></script>
 </body>
 </html>
-
