--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <nav>
             <a href="#home" class="animate-item">Home</a>
             <a href="#vision" class="animate-item">Vision</a>
+            <a href="#approach" class="animate-item">Our Approach</a>
             <a href="#info" class="animate-item">Real-Time Info</a>
             <a href="#careers" class="animate-item">Careers</a>
             <a href="#contact" class="animate-item">Contact</a>
         </nav>
+        <div class="menu-toggle">☰</div>
     </div>
 
     <!-- Hero -->
@@ -28,7 +30,6 @@
         <div class="hero-content">
             <h1 class="hero-title animate-item">Empowering Retail Excellence</h1>
             <p class="hero-subtitle animate-item">At Camcall Retail Private Limited, we provide innovative retail solutions to transform your business.</p>
-            <a href="#contact" class="cta-button animate-item">Get Started</a>
         </div>
         <div class="hero-gradient"></div>
     </section>
@@ -37,8 +38,8 @@
     <section id="vision" class="vision">
         <div class="vision-inner">
             <div class="vision-text">
-                <h2 class="vision-title animate-item">Our Vision</h2>
-                <p class="vision-desc animate-item">To become a leader in retail innovation by offering cutting-edge technology, outstanding customer service, and sustainable growth strategies. We aim to empower businesses to reach their full potential in the modern market.</p>
+                <h2 class="vision-title animate-item">Mission</h2>
+                <p class="vision-desc animate-item">o create innovative solutions that combine advanced technology with a foundation of trust, enabling businesses to grow sustainably and confidently in today’s fast-changing market.</p>
             </div>
             <div class="vision-image animate-item">
                 <img src="vision.jpg" alt="Vision Image" loading="lazy">
@@ -46,15 +47,31 @@
         </div>
     </section>
 
-    <!-- Real-Time Information -->
-    <section id="info" class="flip-layout">
+    <!-- Our Approach Section -->
+    <section id="approach" class="approach-section">
+        <div class="approach-container">
+            <h2 class="section-title animate-item"> Who Are We ?</h2>
+            <div class="content-box animate-item">
+                <h3>WHY CAMCALL</h3>
+                <p>We are CAMCALL Private Limited — a forward-thinking business group with a passion for driving innovation and building trust.
+Through our two specialized divisions, CAMCALL Retail Pvt. Ltd. and CAMCALL Technologies, we deliver powerful solutions that help businesses thrive.</p>
+                <p>From transforming retail operations to crafting advanced technology systems, our goal is to equip every client with the tools, insights, and strategies they need to succeed in a rapidly changing world.</p>
+                <div style="margin-top: 30px;">
+                    <a href="#contact" class="read-more">Contact Us <span>→</span></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Real-Time Information - Updated with dark theme -->
+    <section id="info" class="flip-layout dark-theme">
         <div class="image-box animate-item">
             <img src="images/realtime.jpg" alt="Real Time Information" loading="lazy">
         </div>
         <div class="text-box">
-            <h2 class="animate-item">Real-Time Information</h2>
-            <p class="animate-item">We provide advanced analytics and real-time data tracking so your retail decisions are always based on the latest market insights.</p>
-            <a href="#" class="read-more animate-item">Learn More <span>→</span></a>
+            <h2 class="animate-item">Our Flagship Digital Solutions</h2>
+            <p class="animate-item">We proudly introduce our two premier applications designed to meet diverse needs in today’s fast-paced world. Julebi is a modern online shopping app offering a seamless, stylish, and secure shopping experience at your fingertips. Oldsyllabus is an on-demand service platform that connects you with trusted providers, delivering convenience and reliability whenever you need it. Together, these solutions reflect our commitment to innovation, quality, and customer satisfaction.</p>
+            <a href="#" class="read-more dark-btn animate-item">Learn More <span>→</span></a>
         </div>
     </section>
 
@@ -74,10 +91,11 @@
     <section id="contact" class="contact-section">
         <div class="contact-container">
             <div class="contact-left">
-                <h2 class="logo animate-item">CAMCALL RETAIL</h2>
+                <h2 class="logo animate-item">CAMCALL</h2>
                 <ul class="contact-links">
                     <li class="animate-item"><a href="#home">Home</a></li>
                     <li class="animate-item"><a href="#vision">Vision</a></li>
+                    <li class="animate-item"><a href="#approach">Our Approach</a></li>
                     <li class="animate-item"><a href="#info">Services</a></li>
                     <li class="animate-item"><a href="#careers">Careers</a></li>
                 </ul>
@@ -86,7 +104,7 @@
             <div class="contact-center">
                 <p class="animate-item">Tel: +91-9876543210</p>
                 <p class="animate-item">Email: <a href="mailto:info@camcallretail.com">info@camcallretail.com</a></p>
-                <p class="animate-item">Address: 123 Business Street, Mumbai, India</p>
+                <p class="animate-item">Address: rfgfsahgazhg India</p>
             </div>
 
             <div class="contact-right">
